--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         <profileable android:shell="true" tools:targetApi="q" />
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.jetlagged.MainActivity"
             android:theme="@style/Theme.JetLagged"
             android:exported="true"
             android:configChanges="screenSize|smallestScreenSize|orientation|screenLayout|uiMode"
